# 33income

./: .env.example  .gitignore  README.md  browser_capture_snippet.js  install_or_update_33income.bat  pyproject.toml  requirements.txt  run_agent.bat  run_capture_helper.bat  run_control_tower.bat  run_reporter.bat  run_sender.bat  setup_windows.bat  setup_windows_debug.bat
config/: agent.example.yaml  control_tower.example.yaml
docs/: AGENT_PC_SETUP.md  CAPTURE_MODE.md  CONTROL_TOWER.md  LOCAL_SETUP.md  PLAN.md  RELEASE_ZIP.md  slice-1-staged-rollout-checklist.md
docs/plans/: 2026-05-02-control-tower-centric-refactor.md  2026-05-02-send-expected-tax-504-hardening.md  2026-05-05-control-tower-latency-session-adhesion.md  2026-05-05-ticket-only-ops-relay-and-review-gate.md  2026-05-06-control-tower-latency-session-api-refactor.md  2026-05-06-control-tower-workflow-result-column.md
scripts/: make_release_zip.py
src/income33/: __init__.py  config.py  db.py  logging_utils.py  models.py  release_zip.py  status_mirror.py  version_info.py
tests/: test_agent_client.py  test_agent_login.py  test_agent_runner.py  test_browser_control.py  test_capture_app.py  test_config.py  test_control_tower_api.py  test_db.py  test_find_bookkeeping_zero_additional_expense.py  test_logging_utils.py  test_newta_local_readonly_scraper.py  test_release_zip.py  test_status_mirror.py  test_version_info.py
tools/: README_newta_local_readonly_scraper.md  find_bookkeeping_zero_additional_expense.py  newta_common_business_phone_export.sh  newta_local_readonly_scraper.py
(+25 files in other folders)
