[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "income33"
version = "0.1.0"
description = "33income Windows-first mock control tower and agent scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.30,<1.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
  "requests>=2.32,<3.0",
  "playwright>=1.45,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
